--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                <figure><img src="images/sales_analysis.png" alt="#"/></figure>
                <p>Sales analysis entails analyzing key sales metrics to evaluate strategies, identify improvements and optimize performance. 
                   This project showcases a complete solution for analyzing sales data and extracting actionable insights through the Python programming language.</p>
-               <a class="read_more" href="service.html">Read More</a>
+               <a class="read_more" href="https://github.com/StanleyBankesie/Sales-Analysis-in-python.git">Read More</a>
             </div>
          </div>
       </div>
