--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
                   <div class="titlepage text_align_left">
                      <h2>Technical Proficiencies</h2>
                      <p>•	Data Storage and Management: GCS, AWS S3<br>
-                        •	Data Modelling and Warehousing: Postgres, bigquery, Snowflake,  Amazon Redshift, draw.io<br>
+                        •	Data Modelling and Warehousing: bigquery, Snowflake, Redshift, draw.io<br>
                         •	Database Management: Postgresql, SQL Server<br> 
-                        •	Cloud Computing: Google Cloud, AWS<br>
-                        •	Workflow Orchestration: Apache Airflow, Dagster<br>
+                        •	Cloud Computing: GCP, AWS<br>
+                        •	Workflow Orchestration: Airflow, Dagster<br>
                         •	Data analysis & Visualization: Tableau, Power BI, SQL, python<br>
                         •	Containerization and Infrastructure as code: Docker, Terraform<br>
                         •  Data Ingestion: Data Load Tool(dlt), Airbyte, Fivetran, Sling<br>
