--- a/index.html
+++ b/index.html
@@ -140,6 +140,17 @@
                </div>
                <div class="col-md-4">
                   <div id="ho_shad" class="services_box text_align_left">
+                     <h3>ETL Pipeline with python</h3>
+                     <figure><img src="images/ETL-Pipeline-with-python" alt="#"/></figure>
+                     <p>This project involves Extracting, Transforming, and Loading (ETL) data from the OpenWeather 
+                        API into a PostgreSQL database on behalf of Stanness Bikez. 
+                        The extracted weather data will be used for various analytical purposes within the company's operations.
+                     </p>
+                     <a class="read_more" href="https://github.com/StanleyBankesie/ETL-Pipeline-with-python.git">Read More</a>
+                  </div>
+               </div>
+               <div class="col-md-4">
+                  <div id="ho_shad" class="services_box text_align_left">
                      <h3>End-to-End data pipeline project</h3>
                      <figure><img src="images/end-to-end-project.png" alt="#"/></figure>
                      <p>Data pipelines play a vital role for organizations seeking to leverage their data for business intelligence, analytics, and machine learning.
