--- a/education.html
+++ b/education.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>stanley bankesie</title>
+      <title>Bliss</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -29,13 +29,13 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
    </head>
    <!-- body -->
-   <body class="main-layout">
+   <body class="main-layout inner_page">
       <!-- loader  -->
       <div class="loader_bg">
          <div class="loader"><img src="images/loading.gif" alt="#"/></div>
       </div>
       <!-- end loader -->
-      <div class="full_bg"> 
+      <div class="full_bg">
          <!-- header -->
          <header class="header-area">
             <div class="container">
@@ -49,9 +49,10 @@
                      <div class="navbar-area">
                         <nav class="site-navbar">
                            <ul>
+                              <li><a href="index.html">Home</a></li>
+                              <li><a  href="skills.html">Skills</a></li>
                               <li><a href="projects.html">Projects</a></li>
-                              <li><a href="skills.html">Skills</a></li>
-                              <li><a href="education.html">Education</a></li>
+                              <li><a class="active" href="education.html">Education</a></li>
                               <li><a href="contact.html">Get in touch</a></li>
                            </ul>
                            <button class="nav-toggler">
@@ -64,36 +65,33 @@
             </div>
          </header>
          <!-- end header inner -->
-         <!-- top -->
-         <div class="slider_main">
-            
-                  <!-- first slide -->
-                  <div class="carousel-item active">
-                     <div class="container">
-                        <div class="carousel-caption relative">
-                           <div class="row d_flex">
-                              <div class="col-md-5">
-                                 <div class="creative">
-                                    <h2>Hello, I'm</h2>
-                                    <h1>Stanley Bankesie<br> </h1>
-                                    <p>passionate Web developer and data professional with a knack for delivering results. With expertise in data engineering, I specialize in crafting and executing seamless data pipelines, ETL processes, and data warehousing solutions. My background as a data analyst equips me with strong skills in data visualization, analysis, and uncovering actionable insights. I thrive on collaboration across teams, ensuring alignment with business objectives and delivering scalable data solutions. Committed to continuous growth, I stay at the forefront of advancements in data engineering and analytics.  </p>
-                                    <a class="linkedin" href="http://linkedin.com/in/stanley-bankesie">Linkedin</a>
-                                 </div>
-                              </div>
-                                    <div class="col-md-6">
-                                       <div class="agency">
-                                          <figure><img src="images/name.png" alt="#"/></figure>
-                                          </div>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
+      </div>
+      <!-- end banner -->
+      <!-- about -->
+      <div class="about">
+         <div class="container_width">
+            <div class="row d_flex grig">
+               <div class="col-md-6">
+                  <div class="about_img">
+                     <figure><img src="images/technical.png" alt="#"/>
+                     </figure>
                   </div>
-               <!-- controls -->
-              
+               </div>
+               <div class="col-md-6 order">
+                  <div class="titlepage text_align_left">
+                     <h2>Educational Backgroud</h2>
+                     <p>• Associate Data Engineer Certicate - Datacamp(Ongoing)<br>            
+                        • Google Business Intelligence - Coursera & Google<br>
+                        • Google Data Analytics - Coursera & Google<br>             
+                        • BSc.  Natural Resources Management - University of Energy and Natural Resources, Sunyani<br>
+                         </p>
+                     <a class="read_more" href="https://github.com/StanleyBankesie/Resume/blob/main/STANLEY_BANKESIE_DATA_RESUME.pdf">download resume</a>
+                  </div>
+               </div>  
+            </div>
+         </div>
+      </div>
+      <!-- end about -->
       <footer>
          <div class="footer">
             <div class="container">
