--- a/frontend projects.html
+++ b/frontend projects.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Bliss</title>
+      <title>stanley bankesie</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -51,9 +51,10 @@
                            <ul>
                               <li><a href="index.html">Home</a></li>
                               <li><a href="skills.html">Skills</a></li>
-                              <li><a class="active" href="projects.html">Projects</a></li>
+                              <li><a href="data_projects.html">Data Projects</a></li>
+                              <li><a class="active" href="frontend projects.html">Frontend Projects</a></li>
                               <li><a href="education.html">Education</a></li>
-                              <li><a href="contact.html">Get in touch</a></li>
+                           <!--<li><a href="contact.html">Get in touch</a></li>---->   
                            </ul>
                            <button class="nav-toggler">
                            <span></span>
@@ -80,74 +81,30 @@
             <div class="row">
                <div class="col-md-4">
                   <div id="ho_shad" class="services_box text_align_left">
-                     <h3>Data modelling and warehouse creation</h3>
-                     <figure><img src="images/data_modelling.png" alt="#"/></figure>
-                     <p>This project demonstrates the processes of data modelling and warehouse creation in Snowflake.
-                         It demonstrate the steps taken to design a data model and setting up of a data warehouse
-                          using the snowflake web UI to support analytics and reporting requirements.Click on the button for detailed report</p>
-                     <a class="read_more" href="https://github.com/StanleyBankesie/Data-Modelling-and-Warehouse-Creation.git">Read More</a>
+                     <h3>E-Commerce Dashboard using HTML, CSS and Javascripts</h3>
+                     <figure><img src="images/e-commerce.png" alt="#"/></figure>
+                     <p>The e-commerce dashboard offers a centralized interface that showcases essential metrics such as sales trends, customer insights, product performance, and revenue analysis. Designed with responsiveness and user experience in mind, it adapts seamlessly to different devices, ensuring accessibility for users on desktops, tablets, and mobile phones. By leveraging the power of JavaScript for interactivity, CSS for styling, and HTML for structure, this project demonstrates how front-end technologies can be utilized to create practical tools that empower decision-makers in the e-commerce industry. Explore this project to discover the potential of data visualization in driving informed business strategies.</p>
+                     <a class="read_more" href=" https://stanleybankesie.github.io/E-Commerce-Dashboard.github.io/">Read More</a>
                   </div>
                </div>
                <div class="col-md-4">
                   <div id="ho_shad" class="services_box text_align_left">
-                     <h3>ETL Pipeline with python</h3>
-                     <figure><img src="images/ETL-pipeline-python.png" alt="#"/></figure>
-                     <p>This project involves Extracting, Transforming, and Loading (ETL) data from the OpenWeather 
-                        API into a PostgreSQL database on behalf of Stanness Bikez. 
-                        The extracted weather data will be used for various analytical purposes within the company's operations.
+                     <h3>Digital Clock using HTML, CSS and Javascripts</h3>
+                     <figure><img class="clock" src="images/clock.png" alt="#"/></figure>
+                     <p class="front1">This is a sleek and responsive application built with HTML, CSS, and JavaScript. This clock updates in real-time, showcasing the current time with precision and style. Whether you are viewing it on a desktop, tablet, or smartphone, it is designed to deliver a smooth and consistent experience. Explore the simplicity and elegance of this functional design!
                      </p>
                      <a class="read_more" href="https://github.com/StanleyBankesie/ETL-Pipeline-with-python.git">Read More</a>
                   </div>
                </div>
                <div class="col-md-4">
                   <div id="ho_shad" class="services_box text_align_left">
-                     <h3>End-to-End data pipeline project</h3>
-                     <figure><img src="images/end-to-end-project.png" alt="#"/></figure>
-                     <p>Data pipelines play a vital role for organizations seeking to leverage their data for business intelligence, analytics, and machine learning.
-                        This project demonstrates the seamless extraction, transformation and analysis of data for thorough data-driven decision making and analysis </p>
-                     <a class="read_more" href="https://github.com/StanleyBankesie/End-to-end-data-pipeline-project.git">Read More</a>
+                     <h3>Sales Admin Dashboard using HTML, CSS and Javascripts</h3>
+                     <figure><img src="images/Admin-dashboard.png" alt="#"/></figure>
+                     <p class="front2">This project presents a dynamic and user-friendly application built with HTML, CSS, and JavaScript. Designed to streamline sales management, this dashboard offers intuitive navigation, real-time data visualization, and interactive features to enhance decision-making. Dive in to see how this project can simplify and elevate sales administration tasks</p>
+                     <a class="read_more" href="https://stanleybankesie.github.io/stanstores.github.io/">Read More</a>
                   </div>
                </div>
-               <div class="col-md-4">
-                  <div id="ho_shad" class="services_box text_align_left">
-                     <h3>Data Transformation with dbt</h3>
-                     <figure><img src="images/dbt_image.png" alt="#"/></figure>
-                     <p>Data build tool(dbt) is a powerful open-source tool designed for transforming data within the context of business Intelligence and analytics.
-                         dbt simplifies data transformation processes unlike traditional ETL processes.
-                         The project demonstrates the transformation of data in bigquery for analytical purposes.
-                     </p>
-                     <a class="read_more" href="https://github.com/StanleyBankesie/Data-transformation-with-dbt.git">Read More</a>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div id="ho_shad" class="services_box text_align_left">
-                     <h3>Uber Ride Sharing Analysis</h3>
-                     <figure><img src="images/uber.png" alt="#"/></figure>
-                     <p>Uber is a ride sharing business enterprise found in almost all big cities across the globe.
-                        This Analysis seeks to understand the ride sharing business and it's economic benefits. Analysis was conducted using pandas library in python.
-                         Click on the button for detailed report</p>
-                     <a class="read_more" href="https://github.com/StanleyBankesie/Uber-Data-Analysis/blob/main/UBER_DATA_%20ANALYSIS%20-%20Jupyter%20Notebook.pdf">Read More</a>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div id="ho_shad" class="services_box text_align_left">
-                     <h3>Ghana Health Facilities Analysis</h3>
-                     <figure><img src="images/health.png" alt="#"/></figure>
-                     <p>This Visualized analysis seeks to build insight into healthcare delivery in Ghana.
-                        Data collection of Health Facilities of all levels and tier were collected and compiled the Government of Ghana in 2017.
-                        Click on the button to view detailed dashboard.</p>
-                     <a class="read_more" href="https://public.tableau.com/app/profile/stanley.bankesie/viz/DescriptiveAnalysisofHealthFacilitiesinGhana/Dashboard1?publish=yes">Read More</a>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div id="ho_shad" class="services_box text_align_left">
-                     <h3>Sales Analysis in Python</h3>
-                     <figure><img src="images/sales_analysis.png" alt="#"/></figure>
-                     <p>Sales analysis entails analyzing key sales metrics to evaluate strategies, identify improvements and optimize performance. 
-                        This project showcases a complete solution for analyzing sales data and extracting actionable insights through the Python programming language.</p>
-                     <a class="read_more" href="https://github.com/StanleyBankesie/Sales-Analysis-in-python.git">Read More</a>
-                  </div>
-               </div>
+               
             </div>
          </div>
       </div>
