--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
                      <div class="navbar-area">
                         <nav class="site-navbar">
                            <ul>
-                              <li><a href="projects.html">Projects</a></li>
+                              <li><a href="data_projects.html">Data Projects</a></li>
+                              <li><a href="frontend projects.html">Frontend Projects</a></li>
                               <li><a href="skills.html">Skills</a></li>
                               <li><a href="education.html">Education</a></li>
-                              <li><a href="contact.html">Get in touch</a></li>
+                            <!--<li><a href="contact.html">Get in touch</a></li>-->  
                            </ul>
                            <button class="nav-toggler">
                            <span></span>
