--- a/education.html
+++ b/education.html
@@ -51,9 +51,10 @@
                            <ul>
                               <li><a href="index.html">Home</a></li>
                               <li><a  href="skills.html">Skills</a></li>
-                              <li><a href="projects.html">Projects</a></li>
+                              <li><a href="data_projects.html">Data Projects</a></li>
+                              <li><a href="frontend projects.html">Frontend Projects</a></li>
                               <li><a class="active" href="education.html">Education</a></li>
-                              <li><a href="contact.html">Get in touch</a></li>
+                        <!----<li><a href="contact.html">Get in touch</a></li>---->      
                            </ul>
                            <button class="nav-toggler">
                            <span></span>
