--- a/skills.html
+++ b/skills.html
@@ -52,8 +52,9 @@
                               <li><a href="index.html">Home</a></li>
                               <li><a class="active" href="skills.html">Skills</a></li>
                               <li><a href="education.html">Education</a></li>
-                              <li><a  href="projects.html">Projects</a></li>
-                              <li><a href="contact.html">Get in touch</a></li>
+                              <li><a  href="data_projects.html">Data Projects</a></li>
+                              <li><a href="frontend projects.html">Frontend Projects</a></li>
+                    <!--------<li><a href="contact.html">Get in touch</a></li>------>          
                            </ul>
                            <button class="nav-toggler">
                            <span></span>
