--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <nav class="site-navbar">
                            <ul>
                               <li><a href="data_projects.html">Data Projects</a></li>
-                              <li><a href="frontend projects.html">Frontend Projects</a></li>
+                              <li><a href="frontend_projects.html">Frontend Projects</a></li>
                               <li><a href="skills.html">Skills</a></li>
                               <li><a href="education.html">Education</a></li>
                             <!--<li><a href="contact.html">Get in touch</a></li>-->  
