--- a/skills.html
+++ b/skills.html
@@ -53,7 +53,7 @@
                               <li><a class="active" href="skills.html">Skills</a></li>
                               <li><a href="education.html">Education</a></li>
                               <li><a  href="data_projects.html">Data Projects</a></li>
-                              <li><a href="frontend projects.html">Frontend Projects</a></li>
+                              <li><a href="frontend_projects.html">Frontend Projects</a></li>
                     <!--------<li><a href="contact.html">Get in touch</a></li>------>          
                            </ul>
                            <button class="nav-toggler">
